# SnowDesktop

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  build.bat  build_debug.bat  imgui.ini  release.bat  squash_release_to_main.bat  sync_widgets_release.bat  test_imgui_overlay.cpp  原版流程分析.md  架构设计.md  重构计划v2.md
.claude/: CLAUDE.md  settings.local.json
docs/: widget-plan.md  原版流程分析.md  拖动行为表与当前问题.md  重构计划.md  问题.md
src/: app.h  app_oo.cpp  app_oo.h  app_oo_gfx.h  app_oo_grid.h  app_oo_interact.h  app_oo_menu.h  app_oo_run.h  constants.h  container.cpp  container.h  crashlog.h  desktop.cpp  desktop.h  everything_search.cpp  everything_search.h  general_settings.cpp  general_settings.h  http_runtime.cpp  http_runtime.h  item.cpp  item.h  item_draw_impl.h  main.cpp  main_oo.cpp  navigation_settings.cpp  navigation_settings.h  personalization.cpp  personalization.h  pinyin_table.h  resource.h  resource.rc  search_match.cpp  search_match.h  settings_window.cpp  settings_window.h  slot.cpp  system_snapshot.cpp  system_snapshot.h  types.h  (+5 more)
src/app/: app.cpp  app.h  app_gfx.h  app_grid.h  app_interact.h  app_menu.h  app_quick_navigation.h  app_run.h
src/core/: container.cpp  container.h  desktop.cpp  desktop.h  drag_session.h  drop_model.h  item.cpp  item.h  slot.cpp  slot.h  widget.h
src/widgets/: collection.cpp  file_categories.cpp  folder_mapping.cpp  guide_widget.cpp  lua_script.cpp  widget_base.cpp
src_oo/: constants.h  crashlog.h  main.cpp  resource.h  settings_window.h  types.h  utils.cpp  widget_engine.cpp  widget_engine.h
src_oo/app/: app.h  app_gfx.h  app_grid.h  app_interact.h  app_menu.h  app_run.h
src_oo/core/: container.cpp  container.h  desktop.cpp  desktop.h  drop_model.h  item.cpp  item.h  slot.cpp  widget.h
src_oo/widgets/: collection.cpp  file_categories.cpp  folder_mapping.cpp  lua_script.cpp  widget_base.cpp
widgets/: analog_clock.lua  analog_clock.widget.json  clock.lua  digital_clock.lua  digital_clock.widget.json  media_control.lua  media_control.widget.json  pomodoro.lua  pomodoro.widget.json  quick_launcher.lua  quick_launcher.widget.json  rss_reader.lua  rss_reader.widget.json  sticky_note.lua  sticky_note.widget.json  system_monitor.lua  system_monitor.widget.json
widgets/snowdesktop-lua-widget/: SKILL.md
widgets/snowdesktop-lua-widget/agents/: openai.yaml
widgets/snowdesktop-lua-widget/assets/: widget-template.lua  widget-template.widget.json
widgets/snowdesktop-lua-widget/references/: api.md
